--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script>
     window.$docsify = {
       <!--边侧栏标题-->
-      name: 'Database',
+      name: 'DataBase',
       <!--加载导航栏-->
       loadNavbar: true,
       <!--加载边侧栏-->
