--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--网页名称-->
-  <title>Database</title>
+  <title>DataBase</title>
   <!--网页小图标-->
   <link rel="icon" href="https://chen-zhuo.github.io/image/avatar.jpg">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -15,8 +15,6 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-dark-mode@0.6.1/dist/style.css"/>
   <!--数学符号样式-->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css"/>
-  <!--基金标签-->
-  <script src="//cdn.jsdelivr.net/npm/docsify-plugin-codefund/index.js"></script>
 </head>
 <body>
   <!--等待加载的显示内容-->
@@ -30,7 +28,7 @@
       <!--加载边侧栏-->
       loadSidebar:true,
       <!--内容标题等级-->
-      subMaxLevel: 5,
+      subMaxLevel: 6,
       <!--Corner 挂件-->
       repo: 'https://github.com/chen-zhuo',
       <!--夜晚模式-->
@@ -43,11 +41,7 @@
       search: {
       placeholder: '搜索', //搜索框默认显示的内容
       noData: '没有结果！', //没有查询结果的显示内容
-      },
-      <!--基金标签-->
-      plugins: [
-      DocsifyCodefund.create('fae1f9a4-870c-4c25-b8e0-c80464f7a95c')
-     ]
+      }
     }
   </script>
   <!--基础框架-->
@@ -58,8 +52,6 @@
   <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
   <!--表情符解析-->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
-  <!--图片展示-->
-  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>
   <!--python代码高亮-->
   <script src="//unpkg.com/prismjs/components/prism-python.js"></script>
   <!--go代码高亮-->
